force-app/main/default/objects/Opportunity/fields/Flow_Start_Time_Label__c.field-meta.xml
<CustomField>
    <fullName>Flow_Start_Time_Label__c</fullName>
    <formula>CASE(Text(Flow_Start_Time_Field__c), 
&quot;0000&quot;,&quot;12:00 AM&quot;,  
&quot;0900&quot;,&quot;9:00 AM&quot;,
&quot;12:00 AM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Start Time Label</label>
    <type>Text</type>
</CustomField>