force-app/main/default/objects/Opportunity/fields/Flow_Start_Time_Label_Text__c.field-meta.xml
<CustomField>
    <fullName>Flow_Start_Time_Label_Text__c</fullName>
    <defaultValue>&quot;12:00 AM&quot;</defaultValue>
    <description>Gets the label text of flow start time</description>
    <label>Flow Start Time Label Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>