force-app/main/default/objects/Opportunity/fields/HS_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>HS_Relationship_Manager__c</fullName>
    <formula>Account.HS_Relationship_Manager__c</formula>
    <label>HS Relationship Manager</label>
    <type>Text</type>
</CustomField>