force-app/main/default/objects/Opportunity/fields/Is_Account_Internal_Name_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Internal_Name_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Internal Name Changed</label>
    <type>Checkbox</type>
</CustomField>