force-app/main/default/objects/Opportunity/fields/Is_Drive_Managed__c.field-meta.xml
<CustomField>
    <fullName>Is_Drive_Managed__c</fullName>
    <formula>Account.Is_Account_Managed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Drive Managed</label>
    <type>Checkbox</type>
</CustomField>