force-app/main/default/objects/Opportunity/fields/Is_Latest_Past_Closed_Drive__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest_Past_Closed_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Latest_Past_Closed_Drive</label>
    <type>Checkbox</type>
</CustomField>