force-app/main/default/objects/Opportunity/fields/Is_Path_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Is_Path_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Path Overridden</label>
    <type>Checkbox</type>
</CustomField>