force-app/main/default/objects/Opportunity/fields/Is_Recursion_On__c.field-meta.xml
<CustomField>
    <fullName>Is_Recursion_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used for stopping recursive update on Opportunities when drive change requests are rejected.  This is not a required field and does not need to be considered for migration.</description>
    <label>Is Recursion On</label>
    <type>Checkbox</type>
</CustomField>