force-app/main/default/objects/Opportunity/fields/Is_this_part_of_MultiDay_Drive__c.field-meta.xml
<CustomField>
    <fullName>Is_this_part_of_MultiDay_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates drive is part of a multi-day series for an Account</description>
    <inlineHelpText>Indicates drive is part of a multi-day series for an Account</inlineHelpText>
    <label>Multi-Day Drive</label>
    <type>Checkbox</type>
</CustomField>