force-app/main/default/objects/Opportunity/fields/Last_ARD_Validation_Failed_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Last_ARD_Validation_Failed_TimeStamp__c</fullName>
    <description>This field is used, for Anticipated Registered Donors validation when changing procedure projections.
Ticket: HRP-6051</description>
    <inlineHelpText>This field is used, for Anticipated Registered Donors validation when changing procedure projections.</inlineHelpText>
    <label>Last ARD validation Failed TimeStamp</label>
    <type>DateTime</type>
</CustomField>