force-app/main/default/objects/Opportunity/fields/Last_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Type__c</fullName>
    <inlineHelpText>How did you interact with the customer?</inlineHelpText>
    <label>Last Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>