force-app/main/default/objects/Opportunity/fields/Linked_Opportunity_Drives__c.field-meta.xml
<CustomField>
    <fullName>Linked_Opportunity_Drives__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Opportunity Drives</label>
    <referenceTo>Linked_Opportunity_Drives__c</referenceTo>
    <relationshipLabel>Blood Drive Opportunities</relationshipLabel>
    <relationshipName>Blood_Drive_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>