force-app/main/default/objects/Opportunity/fields/Number_of_2RBC_Assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_2RBC_Assets__c</fullName>
    <label># Of 2RBC Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>