force-app/main/default/objects/Opportunity/fields/Number_of_Plasma_Assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Plasma_Assets__c</fullName>
    <label>#of Plasma Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>