force-app/main/default/objects/Opportunity/fields/Parent_Template_Site__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template_Site__c</fullName>
    <description>Holds the site Id associated with the Parent Template of the opportunity</description>
    <formula>Parent_Template_Id__r.Drive_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Template Site</label>
    <type>Text</type>
</CustomField>