force-app/main/default/objects/Opportunity/fields/Pending_ARD_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Pending_ARD_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used when for Anticipated Registered Donors validation when changing procedure projections.
Ticket: HRP-6051</description>
    <inlineHelpText>This checkbox is used when for Anticipated Registered Donors validation when changing procedure projections.</inlineHelpText>
    <label>Pending ARD Confirmation</label>
    <type>Checkbox</type>
</CustomField>