force-app/main/default/objects/Opportunity/fields/Physical_Location_type__c.field-meta.xml
<CustomField>
    <fullName>Physical_Location_type__c</fullName>
    <formula>TEXT(Drive_Site__r.sked_Physical_Location_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Location type (Deprecated)</label>
    <type>Text</type>
</CustomField>