force-app/main/default/objects/Opportunity/fields/Planning_Path__c.field-meta.xml
<CustomField>
    <fullName>Planning_Path__c</fullName>
    <label>Planning Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>