force-app/main/default/objects/Opportunity/fields/Platelet_Pheresis_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Platelet_Pheresis_Procedures__c</fullName>
    <label>Platelet Pheresis Procedures(not in Use)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>