force-app/main/default/objects/Opportunity/fields/Primary_Drive_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Drive_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created as part of HRP-7470
This field will be used in &apos;Create New Template&apos; flow to capture primary contact (default/user selected) and drive service role will be created based on the output value</description>
    <label>Primary Drive Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Blood Drive Opportunities</relationshipLabel>
    <relationshipName>Blood_Drive_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>