force-app/main/default/objects/Opportunity/fields/Procedure_Projections_Default__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Projections_Default__c</fullName>
    <label>Procedure Projections Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>