force-app/main/default/objects/Opportunity/fields/Projected_Registered_Donors_Default__c.field-meta.xml
<CustomField>
    <fullName>Projected_Registered_Donors_Default__c</fullName>
    <label>Projected Registered Donors Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>