force-app/main/default/objects/Opportunity/fields/Recruitment_Strategy_with_Tactics__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Strategy_with_Tactics__c</fullName>
    <description>Includes Direct Recruitment, Promotion, Social Media, Communications, Education, and Presentations</description>
    <label>Recruitment Strategy with Tactics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>