force-app/main/default/objects/Opportunity/fields/Red_Cross_Volunteer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Red_Cross_Volunteer_Quantity__c</fullName>
    <description>Created as part of HRP-14653</description>
    <label>Red Cross Volunteer Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>