force-app/main/default/objects/Opportunity/fields/Red_Cross_Volunteer_Required__c.field-meta.xml
<CustomField>
    <fullName>Red_Cross_Volunteer_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of HRP-14653</description>
    <label>Red Cross Volunteer Required</label>
    <type>Checkbox</type>
</CustomField>