force-app/main/default/objects/Opportunity/fields/Redcross_Volunteer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Redcross_Volunteer_Quantity__c</fullName>
    <label>Redcross Volunteer Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>