force-app/main/default/objects/Opportunity/fields/Redcross_Volunteer_Required__c.field-meta.xml
<CustomField>
    <fullName>Redcross_Volunteer_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redcross Volunteer Required</label>
    <type>Checkbox</type>
</CustomField>