force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Opportunity Owner Region.</description>
    <formula>Owner.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity Owner Region.</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>