force-app/main/default/objects/Opportunity/fields/Related_Scheduled_Drive_Productivity__c.field-meta.xml
<CustomField>
    <fullName>Related_Scheduled_Drive_Productivity__c</fullName>
    <formula>Related_Scheduled_Drive__r.sked_Drive_Productivity_Planned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Scheduled Drive Productivity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>