force-app/main/default/objects/Opportunity/fields/Rollover_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Consideration__c</fullName>
    <description>A picklist used to indicate whether the drive should &#39;always roll&#39; or &#39;do not roll&#39;</description>
    <label>Rollover Consideration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Roll</fullName>
            </value>
            <value>
                <fullName>Always Roll</fullName>
                <isActive>false</isActive>
                <label>Always Roll</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>