force-app/main/default/objects/Opportunity/fields/Security_Escort_Name__c.field-meta.xml
<CustomField>
    <fullName>Security_Escort_Name__c</fullName>
    <label>Security Escort Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>