force-app/main/default/objects/Opportunity/fields/Send_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If DM approved for Sending Emails then this will be checked</description>
    <label>Send Emails</label>
    <type>Checkbox</type>
</CustomField>