force-app/main/default/objects/Opportunity/fields/Send_Mailers__c.field-meta.xml
<CustomField>
    <fullName>Send_Mailers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If DM approved for Sending Mailers then this will be checked</description>
    <label>Send Mailers</label>
    <type>Checkbox</type>
</CustomField>