force-app/main/default/objects/Opportunity/fields/Site_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Building_Name__c</fullName>
    <formula>Drive_Site__r.sked_Site_Building_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site/Building Name</label>
    <type>Text</type>
</CustomField>