force-app/main/default/objects/Opportunity/fields/Site_TBD__c.field-meta.xml
<CustomField>
    <fullName>Site_TBD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site TBD</label>
    <type>Checkbox</type>
</CustomField>