force-app/main/default/objects/Opportunity/fields/Site_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Zip_Code__c</fullName>
    <formula>Drive_Site__r.sked_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Zip Code</label>
    <type>Text</type>
</CustomField>