force-app/main/default/objects/Opportunity/fields/sked_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Initiated_By__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Plan Sponsor Declined</fullName>
            </value>
            <value>
                <fullName>ARC Management</fullName>
            </value>
            <value>
                <fullName>ARC Staff Strike</fullName>
            </value>
            <value>
                <fullName>Block Scheduling-Deny</fullName>
            </value>
            <value>
                <fullName>Budgeted FTE Reduction</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Donor Base Illness</fullName>
            </value>
            <value>
                <fullName>Equipment Issues</fullName>
            </value>
            <value>
                <fullName>Fixed Site Trade Area</fullName>
            </value>
            <value>
                <fullName>FS Quarterly Calibration</fullName>
            </value>
            <value>
                <fullName>Geo Alignment</fullName>
            </value>
            <value>
                <fullName>Lost Room/Site Issues</fullName>
            </value>
            <value>
                <fullName>Low Prod/High CPUC</fullName>
            </value>
            <value>
                <fullName>Man-made Disaster</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Overbooked Day</fullName>
            </value>
            <value>
                <fullName>Region Consolidation</fullName>
            </value>
            <value>
                <fullName>Sponsor Conflict</fullName>
            </value>
            <value>
                <fullName>Staff Call-Out</fullName>
            </value>
            <value>
                <fullName>Staff Shortage</fullName>
            </value>
            <value>
                <fullName>System Need</fullName>
            </value>
            <value>
                <fullName>Temperature</fullName>
            </value>
            <value>
                <fullName>Time elapsed</fullName>
            </value>
            <value>
                <fullName>Vehicle Issue</fullName>
            </value>
            <value>
                <fullName>Weather/Natural Disaster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>