force-app/main/default/objects/Opportunity/fields/sked_Replacement_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Replacement_Drive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Replacement for a cancelled drive</description>
    <label>Replacement Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Blood Drive Opportunities (Replacement Drive)</relationshipLabel>
    <relationshipName>Replacement_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>