force-app/main/default/objects/Opportunity/fields/Slot_Generator__c.field-meta.xml
<CustomField>
    <fullName>Slot_Generator__c</fullName>
    <description>Field has been added as part of HRP-12011</description>
    <label>Slot Generator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>