force-app/main/default/objects/Opportunity/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc</fullName>
            </value>
            <value>
                <fullName>Calendar Build</fullName>
            </value>
            <value>
                <fullName>Business Planning</fullName>
            </value>
            <value>
                <fullName>Adhoc Calendar Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>