force-app/main/default/objects/Opportunity/fields/Special_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Special_Affiliations__c</fullName>
    <description>Created as part of HRP-15432</description>
    <label>Special Affiliations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Battle of the Badges</fullName>
            </value>
            <value>
                <fullName>BloodLink</fullName>
            </value>
            <value>
                <fullName>Community Club</fullName>
            </value>
            <value>
                <fullName>Future Blood Donor (K-8)</fullName>
            </value>
            <value>
                <fullName>High School Scholarship</fullName>
            </value>
            <value>
                <fullName>In Honor/In Memory Of</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>