force-app/main/default/objects/Opportunity/fields/Special_Circumstances__c.field-meta.xml
<CustomField>
    <fullName>Special_Circumstances__c</fullName>
    <description>Created as part of HRP-701</description>
    <label>Special Circumstances</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competition Impact</fullName>
            </value>
            <value>
                <fullName>First Time Drive</fullName>
            </value>
            <value>
                <fullName>High Profile/Sensitive</fullName>
            </value>
            <value>
                <fullName>Risk for Removal</fullName>
            </value>
            <value>
                <fullName>Strategic Stretch Booking</fullName>
            </value>
            <value>
                <fullName>Strategic Stretch Booking - Diverse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>