force-app/main/default/objects/Opportunity/fields/Special_Circumstances_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Circumstances_Notes__c</fullName>
    <description>Created as part of HRP-701</description>
    <label>Special Circumstances - Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>