force-app/main/default/objects/Opportunity/fields/Split_Type__c.field-meta.xml
<CustomField>
    <fullName>Split_Type__c</fullName>
    <description>Opportunity Split Type</description>
    <inlineHelpText>Opportunity Split Type</inlineHelpText>
    <label>Split Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coverage – Vacancy</fullName>
            </value>
            <value>
                <fullName>Coverage – leave**</fullName>
            </value>
            <value>
                <fullName>DRA**</fullName>
            </value>
            <value>
                <fullName>Sickle Cell Development Growth</fullName>
            </value>
            <value>
                <fullName>Fixed RSMO Donations**</fullName>
            </value>
            <value>
                <fullName>Split Credit**</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>