force-app/main/default/objects/Opportunity/fields/Staffing_Default__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Default__c</fullName>
    <label>Staffing Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>