force-app/main/default/objects/Opportunity/fields/Start_End_Time_Display__c.field-meta.xml
<CustomField>
    <fullName>Start_End_Time_Display__c</fullName>
    <formula>IF(
    ISBLANK(Start_Time__c),
    &quot;--&quot;,
    LPAD(
        TEXT(MOD(HOUR(Start_Time__c) - 1, 12) + 1),
        2,
        &quot;0&quot;
    ) &amp;
    &quot;:&quot; &amp;
    LPAD(TEXT(MINUTE(Start_Time__c)), 2, &quot;0&quot;) &amp;
    IF(HOUR(Start_Time__c) &gt;= 12, &quot; PM&quot;, &quot; AM&quot;)
)
&amp;
&quot; - &quot;
&amp;
IF(
    ISBLANK(End_Time__c),
    &quot;--&quot;,
    LPAD(
        TEXT(MOD(HOUR(End_Time__c) - 1, 12) + 1),
        2,
        &quot;0&quot;
    ) &amp;
    &quot;:&quot; &amp;
    LPAD(TEXT(MINUTE(End_Time__c)), 2, &quot;0&quot;) &amp;
    IF(HOUR(End_Time__c) &gt;= 12, &quot; PM&quot;, &quot; AM&quot;)
)</formula>
    <label>Start - End Time</label>
    <type>Text</type>
</CustomField>