force-app/main/default/objects/Opportunity/fields/STARTTIMEFORMULA__c.field-meta.xml
<CustomField>
    <fullName>STARTTIMEFORMULA__c</fullName>
    <formula>TEXT(Flow_Start_Time_Field__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STARTTIMEFORMULA</label>
    <type>Text</type>
</CustomField>