force-app/main/default/objects/Opportunity/fields/Targeted_Ask_Date__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Ask_Date__c</fullName>
    <label>Target Ask Date</label>
    <type>Date</type>
</CustomField>