force-app/main/default/objects/Opportunity/fields/Total_Number_of_Drives_Agreed_Annual__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Drives_Agreed_Annual__c</fullName>
    <inlineHelpText>How many drive per year has been agreed upon?</inlineHelpText>
    <label>Total Number of Drives Agreed (Annual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>