force-app/main/default/objects/Opportunity/fields/Total_Planned_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Units__c</fullName>
    <formula>Double_Red_Projected_Units__c  +  Other_Projected_Units__c + Apheresis_Projected_Units__c + WholeBloodProjectedUnits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of drives annually * avg per drive</inlineHelpText>
    <label>Total Planned Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>