force-app/main/default/objects/Opportunity/fields/Total_Procedures_Projected_Template__c.field-meta.xml
<CustomField>
    <fullName>Total_Procedures_Projected_Template__c</fullName>
    <formula>Double_Red_Procedures_Projected_Template__c  +  WholeBloodProceduresProjectedTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Procedures Projected Template</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>