force-app/main/default/objects/Opportunity/fields/Total_Projected_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Total_Projected_Procedures__c</fullName>
    <formula>WB_Projected_Procedures__c  +  X2RBC_Projected_Procedures__c + Plasma_Pheresis_Projected_Procedures__c+ Platelet_Projected_Procedures__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Procedures Projected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>