force-app/main/default/objects/Opportunity/fields/Type_of_Drive__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Drive__c</fullName>
    <label>Type of Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Fixed Site</fullName>
            </value>
            <value>
                <fullName>RSMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>