force-app/main/default/objects/Opportunity/fields/Volunteers_Default__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Default__c</fullName>
    <label>Volunteers Default</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>