force-app/main/default/objects/Opportunity/fields/Volunteers_Template__c.field-meta.xml
<CustomField>
    <fullName>Volunteers_Template__c</fullName>
    <label>Volunteers Template</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>