force-app/main/default/objects/Opportunity/fields/Web_Schedule_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Web_Schedule_EndDate__c</fullName>
    <description>HRP-4987:SF TimeZone Objects</description>
    <label>Web Schedule End Date</label>
    <type>Date</type>
</CustomField>