force-app/main/default/objects/Opportunity/fields/Web_Schedule_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Web_Schedule_StartDate__c</fullName>
    <description>HRP-4987:SF TimeZone Objects</description>
    <label>Web Schedule Start Date</label>
    <type>Date</type>
</CustomField>