force-app/main/default/objects/Opportunity/fields/Web_Scheduling_End_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Web_Scheduling_End_Date_Offset__c</fullName>
    <inlineHelpText>Enter negative value to represent the # of days in advance web scheduling ends</inlineHelpText>
    <label>Web Scheduling End Date Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>